# Ledger-Drift

./: .gitignore  ledgerdrift.yml  pyproject.toml  readme.md
src/ledger_drift/: cli.py  config.py  context.py  diff_reader.py  evaluator.py  exit_codes.py  expression.py  heuristics.py  presentation.py  rules.py  scanner.py  scoring.py  test.py
src/tests/: fake_pricing.py
